--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="ar">
 
-<head>
-    <title>Amr Khaled - CV </title>
-
     <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="title" property="og:title" content="W3Schools.com">
-        <meta property="og:image:type" content="image/png">
-        <meta property="og:image:width" content="436">
-        <meta property="og:image:height" content="228">
+        <title>Amr Khaled - CV </title>
 
-        <style>
+        <head>
+            <meta charset="utf-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <meta name="title" property="og:title" content="W3Schools.com">
+            <meta property="og:image:type" content="image/png">
+            <meta property="og:image:width" content="436">
+            <meta property="og:image:height" content="228">
+
+            <style>
             body {
                 font-family: Arial, sans-serif;
                 background-color: #f7f7f7;
@@ -105,131 +105,165 @@
                 color: rgb(146, 146, 146);
             }
         </style>
-    </head>
+        </head>
 
-<body>
-    <div class="container">
-        <header>
-            <h1 class="underline" style="color:#4056f8">Amr Khaled Abdelfatah </h1>
-            <div class="contact-info">
-                <p><strong>Address:</strong> 6th of October, Giza, Egypt</p>
-                <p><strong>Email:</strong> amrkhaledo972@gmail.com</p>
-                <p><strong>Phone:</strong> 01010144755</p>
-                <p class="hover-text"> 
-                    <a href="https://www.linkedin.com/in/amr-khaled-5a6317276" target="_blank"
-                        style="color:#5568f9">View My LinkedIn Profile</a>
-                </p>
-                <p class="hover-text">
-                    <a href="https://github.com/Amr-Khaled-Abdelfatach" target="_blank" style="color:#5568f9"> My GitHub
-                        Profile</a>
-                </p>
+        <body>
+            <div class="container">
+                <header>
+                    <h1 class="underline" style="color:#4056f8">Amr Khaled
+                        Abdelfatah </h1>
+                    <div class="contact-info">
+                        <p><strong>Address:</strong> 6th of October, Giza,
+                            Egypt</p>
+                        <p><strong>Email:</strong> amrkhaledo972@gmail.com</p>
+                        <p><strong>Phone:</strong> 01010144755</p>
+                        <p class="hover-text">
+                            <a
+                                href="https://www.linkedin.com/in/amr-khaled-5a6317276"
+                                target="_blank"
+                                style="color:#5568f9">View My LinkedIn
+                                Profile</a>
+                        </p>
+                        <p class="hover-text">
+                            <a href="https://github.com/Amr-Khaled-Abdelfatach"
+                                target="_blank" style="color:#5568f9"> My GitHub
+                                Profile</a>
+                        </p>
 
+                    </div>
+                </header>
+
+                <div class="section">
+                    <h2>&#128366; <span class="underline">Objective</span></h2>
+                    <p>Seeking a summer internship opportunity in programming to
+                        gain practical experience and apply academic
+                        knowledge in a real-world business environment. Eager to
+                        learn in this dynamic industry.</p>
+                </div>
+
+                <div class="full_line"></div> <!--To Make A small Line-->
+
+                <div class="section">
+                    <h2>&#128736; <span
+                            class="underline">Internships</span></h2>
+                    <ul>
+                        <li>Internship of Robotics Arduino Programming at Smart
+                            Technology. <strong>(March 2022)</strong></li>
+                        <br>
+                        <li>Internship at ITI in Full Stack Web Development
+                            using python. <strong>(From Aug 2024 : sep
+                                2024)</strong></li>
+                    </ul>
+                </div>
+
+                <div class="full_line"></div> <!--To Make A small Line-->
+
+                <div class="section">
+                    <h2>&#x1F393;<span class="underline">Education</span></h2>
+                    <p><strong> Bachelor’s Year (4th Year) Of Business
+                            Information Systems<br>
+                            Cumulative grade: Excellent (GPA: 3.4)<br></strong>
+                        At Giza Higher Institute<br>
+                    </p>
+                </div>
+
+                <div class="full_line"></div> <!--To Make A small Line-->
+
+                <div class="section">
+                    <h2>&#x1F468;&#x200D;&#x1F4BB; <span
+                            class="underline">Technical Skills</span></h2>
+                    <ul class="skills-list">
+                        <li>HTML5</li>
+                        <li>python</li>
+                        <li>CSS</li>
+                        <li>SQl</li>
+                        <li>Java Script</li>
+                        <li>C++</li>
+                        <li>Git & GitHub</li>
+                        <li>Object Oriented</li>
+                        <li>JAVA</li>
+                        <li>Problem-Solving</li>
+
+                    </ul>
+                </div>
+
+                <div class="full_line"></div> <!--To Make A small Line-->
+
+                <div class="section">
+                    <h2>&#128202;<span class="underline">Projects</span></h2>
+                    <a
+                        href="https://github.com/Amr-Khaled-Abdelfatach/snakeGame-by-Python/blob/main/A_Snake_Game.py"
+                        target="_blank"
+                        style="color:#5568f9" class="hover-text">A Snake game by
+                        Python</a>
+                    <p class="text">Reinventing the snake Game from Scratch with
+                        python prgramming language.
+                        <br>
+                        From design, Coding, performance optimization and
+                        problem-solving.
+                    </p>
+
+                    <a href="https://github.com/Amr-Khaled-Abdelfatach/ITI_final_Project" target="_blank"
+                        style="color:#5568f9" class="hover-text">A ITI Final project</a>
+                    <p class="text">W3Schools-like Website Simulation
+                        <br>
+                        A website that mimics the design and functionality of
+                        the educational W3Schools platform, featuring
+                        interactive learning pages and tutorials in programming
+                        languages such as HTML, CSS, and JavaScript. The project
+                        demonstrates advanced front-end development skills and
+                        the ability to complete full-scale projects from concept
+                        to execution.
+                    </p>
+                </div>
+
+                <div class="full_line"></div> <!--To Make A small Line-->
+
+                <div class="section">
+                    <h2>&#128187;<span class="underline">Computer
+                            Skills</span></h2>
+                    <ul>
+                        <li>International Computer Driver License.</li>
+                        <li>Very good at Microsoft Office (Excel, Word,
+                            PowerPoint).</li>
+                        <li>Very good at Internet and Windows basics.</li>
+                    </ul>
+                </div>
+
+                <div class="full_line"></div> <!--To Make A small Line-->
+
+                <div class="section">
+                    <h2>&#128392;<span class="underline">Soft Skills</span></h2>
+                    <ul>
+                        <li>Time Management</li>
+                        <li>Communication Skills</li>
+                        <li>Presentation Skills</li>
+                    </ul>
+                </div>
+
+                <div class="full_line"></div> <!--To Make A small Line-->
+
+                <div class="section">
+                    <h2>&#128392;<span class="underline">Languages</span></h2>
+                    <li><strong>Arabic:</strong> Native</li><br>
+                    <li><strong>English:</strong> Very Good</li>
+                </ul>
             </div>
-        </header>
 
-        <div class="section">
-            <h2>&#128366; <span class="underline">Objective</span></h2>
-            <p>Seeking a summer internship opportunity in programming to gain practical experience and apply academic
-                knowledge in a real-world business environment. Eager to learn in this dynamic industry.</p>
+            <div class="full_line"></div> <!--To Make A small Line-->
+
+            <div class="section">
+                <h2>&#128392;<span class="underline">Personal
+                        Information</span></h2>
+                <p>Nationality: Egyptian<br>
+                    Date of Birth: 23/07/2003<br>
+                    Marital Status: Single</p>
+            </div>
+
+            <footer>
+                <p>&copy; 2024 Amr Khaled. All Rights Reserved.</p>
+            </footer>
         </div>
-
-        <div class="full_line"></div> <!--To Make A small Line-->
-
-        <div class="section">
-            <h2>&#x1F393;<span class="underline">Education</span></h2>
-            <p><strong> Bachelor’s Year (4th Year) Of Business Information Systems<br>
-                Cumulative grade: Excellent (GPA: 3.4)<br></strong>
-                At Giza Higher Institute<br>
-            </p>
-        </div>
-
-        <div class="full_line"></div> <!--To Make A small Line-->
-
-
-        <div class="section">
-            <h2>&#x1F468;&#x200D;&#x1F4BB; <span class="underline">Programming Skills</span></h2>
-            <ul class="skills-list">
-                <li>HTML5</li>
-                <li>python</li>
-                <li>CSS</li>
-                <li>SQl</li>
-                <li>Java Script</li>
-                <li>C++</li>
-                <li>Git & GitHub</li>
-                <li>Object Oriented</li>
-                <li>JAVA</li>
-                <li>Problem-Solving</li>
-                
-            </ul>
-        </div>
-
-        <div class="full_line"></div> <!--To Make A small Line-->
-
-        <div class="section">
-            <h2 class="underline"> Internships</h2>
-            <ul>
-                <li>Internship of Robotics Arduino Programming at Smart Technology  <strong>(March 2022)</strong></li>
-                <li>Internship at ITI in Full Stack Web Development using python <strong>(From August 2024 : septenmber 24)</strong></li>
-            </ul>
-        </div>
-
-        <div class="full_line"></div> <!--To Make A small Line-->
-
-        <div class="section">
-            <h2>📊<span class="underline">Projects</span></h2>
-            <a href="https://github.com/Amr-Khaled-Abdelfatach/snakeGame-by-Python/blob/main/A_Snake_Game.py" target="_blank"
-                style="color:#5568f9" class="hover-text">A Snake game by Python</a>
-                <p class="text">Reinventing the snake Game from Scratch with python prgramming language.
-                    <br>
-                    From design, Coding, performance optimization and problem-solving.
-                </p>
-            </p>
-        </div>
-
-        <div class="full_line"></div> <!--To Make A small Line-->
-
-        <div class="section">
-            <h2>&#128187;<span class="underline">Computer Skills</span></h2>
-            <ul>
-                <li>International Computer Driver License.</li>
-                <li>Very good at Microsoft Office (Excel, Word, PowerPoint).</li>
-                <li>Very good at Internet and Windows basics.</li>
-            </ul>
-        </div>
-
-        <div class="full_line"></div> <!--To Make A small Line-->
-
-        <div class="section">
-            <h2 class="underline">Languages</h2>
-            <ul>
-                <li><strong>Arabic:</strong>  Native</li>
-                <li><strong>English:</strong> Very Good</li>
-            </ul>
-        </div>
-
-        <div class="full_line"></div> <!--To Make A small Line-->
-
-        <div class="section">
-            <h2 class="underline">Extra Curriculum Activities</h2>
-            <ul>
-                <li>Writing a weekly report about team work and achievements.</li>
-                <li>Empowering and encouraging team members and solving their problems.</li>
-            </ul>
-        </div>
-
-        <div class="full_line"></div> <!--To Make A small Line-->
-
-        <div class="section">
-            <h2 class="underline">Personal Information</h2>
-            <p>Nationality: Egyptian<br>
-                Date of Birth: 23/07/2003<br>
-                Marital Status: Single</p>
-        </div>
-
-        <footer>
-            <p>&copy; 2024 Amr Khaled. All Rights Reserved.</p>
-        </footer>
-    </div>
-</body>
+    </body>
 
 </html>
